--- a/Client/Packages/manifest.json
+++ b/Client/Packages/manifest.json
@@ -1,16 +1,19 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.feature.2d": "2.0.0",
-    "com.unity.ide.rider": "3.0.27",
+    "cn.tuanjie.wx-uploader": "0.1.4",
+    "com.qq.weixin.minigame": "https://gitee.com/wechat-minigame/minigame-tuanjie-transform-sdk.git",
+    "com.unity.ai.navigation": "1.1.6",
+    "com.unity.collab-proxy": "2.5.1",
+    "com.unity.feature.2d": "2.0.1",
+    "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.nuget.newtonsoft-json": "3.2.2",
     "com.unity.test-framework": "1.1.33",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.5",
+    "com.unity.textmeshpro": "3.0.9",
+    "com.unity.timeline": "1.7.7",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.1",
+    "com.unity.visualscripting": "1.9.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -20,6 +23,7 @@
     "com.unity.modules.director": "1.0.0",
     "com.unity.modules.imageconversion": "1.0.0",
     "com.unity.modules.imgui": "1.0.0",
+    "com.unity.modules.infinity": "1.0.0",
     "com.unity.modules.jsonserialize": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0",
     "com.unity.modules.physics": "1.0.0",
